--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
-    "serve": "^10.1.2"
+    "serve": "^10.1.2",
+    "xregexp": "^4.2.4"
   },
   "scripts": {
     "dev": "react-scripts start",
